--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,9 @@
     <meta name="date" content="2013-08-27T10:24:18+0000"/>
     <meta name="keywords" content="gearman gearmand"/>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-
     <link rel="stylesheet" href="{{ site.url }}/css/site.css" />
     <link rel="stylesheet" href="{{ site.url }}/css/pygments.css" />
+    <link rel="shortcut icon" href="{{ site.url }}/img/favicon.png" />
 </head>
 <body>
 
