GH pages needs baseurl not url

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,25 +8,25 @@
     <meta name="date" content="2013-08-27T10:24:18+0000"/>
     <meta name="keywords" content="gearman gearmand"/>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel="stylesheet" href="{{ site.url }}/css/site.css" />
-    <link rel="stylesheet" href="{{ site.url }}/css/pygments.css" />
-    <link rel="shortcut icon" href="{{ site.url }}/img/favicon.png" />
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/site.css" />
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/pygments.css" />
+    <link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon.png" />
 </head>
 <body>
 
 <div class="logo">
-    <a href="/" title="Home - Gearman Job Server"><img src="{{ site.url }}/img/logo.png" alt="Gearman Job Server" /></a>
+    <a href="/" title="Home - Gearman Job Server"><img src="{{ site.baseurl }}/img/logo.png" alt="Gearman Job Server" /></a>
 </div>
 
 <div class="navigation">
     <ul>
-        <li><a href="/news">News</a></li>
-        <li><a href="/documentation">Documentation</a></li>
-        <li><a href="/getting-started">Getting Started</a></li>
-        <li><a href="/download">Download</a></li>
-        <li><a href="/communication">Communication</a></li>
-        <li><a href="/presentations">Presentations</a></li>
-        <li><a href="/user-cases">Use Cases</a></li>
+        <li><a href="{{ site.baseurl }}/news">News</a></li>
+        <li><a href="{{ site.baseurl }}/documentation">Documentation</a></li>
+        <li><a href="{{ site.baseurl }}/getting-started">Getting Started</a></li>
+        <li><a href="{{ site.baseurl }}/download">Download</a></li>
+        <li><a href="{{ site.baseurl }}/communication">Communication</a></li>
+        <li><a href="{{ site.baseurl }}/presentations">Presentations</a></li>
+        <li><a href="{{ site.baseurl }}/user-cases">Use Cases</a></li>
     </ul>
 </div>
 
