Add table of contents support

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="{{ site.baseurl }}/css/site.css" />
     <link rel="stylesheet" href="{{ site.baseurl }}/css/pygments.css" />
     <link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon.png" />
+    <script src="{{ site.baseurl }}/js/jquery-1.10.2.js"></script>
+    <script src="{{ site.baseurl }}/js/toc.js"></script>
 </head>
 <body>
 
