--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 {% include navigation.html %}
 
 <div class="main-content"><div class="main-inner">
+    <div class="toc"></div>
 {{ content }}
 </div></div>
 
