--- a/css/site.css
+++ b/css/site.css
@@ -53,6 +53,36 @@ html {
     margin-left: -140px;
 }
 
+.main-inner .toc {
+    float: right;
+    width: 200px;
+    border-left: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+    padding: 10px 5px;
+    margin: -15px -20px 5px 5px;
+    font-size: 0.875em;
+}
+
+.main-inner .toc > i {
+    display: none;
+}
+
+.main-inner .toc ol {
+    margin: 0;
+    padding: 0;
+}
+
+.main-inner .toc > ol {
+    margin: 0 0 0 10px;
+    padding: 0;
+}
+
+.main-inner .toc li {
+    list-style: circle;
+    margin: 0 0 0 10px;
+    padding: 0;
+}
+
 .main-inner {
     margin-left: 140px;
     margin-right: 20px;
