Highlight external links as such

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,5 +6,8 @@
     </p>
 </div>
 
+<script>(function($){$('a:not(:has(img))').filter(function(){return this.hostname&&this.hostname!==location.hostname;}).addClass("external");})(jQuery);</script>
+<style>a.external {background:url("http://3.bp.blogspot.com/-DXJ-d748UZA/UbVbb7pWlKI/AAAAAAAAEiU/zDhsxdTtXRU/s320/Icon_External_Link+12.png") no-repeat right center; padding-right:13px; display:inline-block !important; }</style>
+
 </body>
 </html>
