Examples directory starter -- code tabs will help to make code samples more universal and help to focud the docs on gearmans role and be less about specific languages. the basic reverse has been rewritten with this approach in mind

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,7 @@
     <link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon.png" />
     <script src="{{ site.baseurl }}/js/jquery-1.10.2.js"></script>
     <script src="{{ site.baseurl }}/js/toc.js"></script>
+    <script src="{{ site.baseurl }}/js/code-tabs.js"></script>
 </head>
 <body>
 
