Include the trailing slash to ensure correct url location

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,5 +18,5 @@
 <body>
 
 <div class="logo">
-    <a href="{{ site.baseurl }}" title="Home - Gearman Job Server"><img src="{{ site.baseurl }}/img/logo.png" alt="Gearman Job Server" /></a>
+    <a href="{{ site.baseurl }}/" title="Home - Gearman Job Server"><img src="{{ site.baseurl }}/img/logo.png" alt="Gearman Job Server" /></a>
 </div>
