Replaced "use cases" with "examples" which will server the project better

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -6,6 +6,6 @@
         <li><a href="{{ site.baseurl }}/download">Download</a></li>
         <li><a href="{{ site.baseurl }}/communication">Communication</a></li>
         <li><a href="{{ site.baseurl }}/presentations">Presentations</a></li>
-        <li><a href="{{ site.baseurl }}/user-cases">Use Cases</a></li>
+        <li><a href="{{ site.baseurl }}/examples">Examples</a></li>
     </ul>
 </div>
