Alllll the slashes

--- a/_layouts/examples.html
+++ b/_layouts/examples.html
@@ -2,6 +2,6 @@
 layout: default
 ---
 
-<h1 id="top"><a href="{{ site.baseurl }}/examples">Examples</a>: {{ page.title}}</h1>
+<h1 id="top"><a href="{{ site.baseurl }}/examples/">Examples</a>: {{ page.title}}</h1>
 
 {{ content }}
