--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h1 id="top"><a href="{{ site.baseurl }}/news">News</a>: {{ page.title }}</h1>
+<h1 id="top"><a href="{{ site.baseurl }}/news/">News</a>: {{ page.title }}</h1>
 <p> - {{ page.date | date: "%Y-%m-%d" }}</p>
 
 {{ content }}
