Make external links schemaless
We're not forcing https, there's no reason to. But if we do get https,
we should try to make the whole page secure.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,12 +2,11 @@
 <div class="footer">
     <p>
         Except where otherwise noted, content on this wiki is licensed under the
-        following license: <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">CC Attribution-Noncommercial-Share Alike 3.0 Unported</a>
+        following license: <a href="//creativecommons.org/licenses/by-nc-sa/3.0/">CC Attribution-Noncommercial-Share Alike 3.0 Unported</a>
     </p>
 </div>
 
 <script>(function($){$('a:not(:has(img))').filter(function(){return this.hostname&&this.hostname!==location.hostname;}).addClass("external");})(jQuery);</script>
-<style>a.external {background:url("http://3.bp.blogspot.com/-DXJ-d748UZA/UbVbb7pWlKI/AAAAAAAAEiU/zDhsxdTtXRU/s320/Icon_External_Link+12.png") no-repeat right center;padding-right:13px;}</style>
-
+<style>a.external {background:url("//3.bp.blogspot.com/-DXJ-d748UZA/UbVbb7pWlKI/AAAAAAAAEiU/zDhsxdTtXRU/s320/Icon_External_Link+12.png") no-repeat right center;padding-right:13px;}</style>
 </body>
 </html>
